# basilisk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  KALSHI_SETUP.md  Makefile  Procfile  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  candles.py  current.py  health.py  mobile.py  orderbook.py  signals.py  statistics.py  trading.py  webhooks.py
backend/app/core/: cache.py  circuit_breakers.py  config.py  encryption.py  http_client.py  privy_auth.py
backend/app/data/: bitcoin_client.py  dflow_client.py  dflow_types.py  ethereum_client.py  generic_price_client.py  kalshi_client.py  kalshi_ws.py  ripple_client.py  solana_client.py  ws_data_bus.py
backend/app/db/: database.py  models.py
backend/app/models/: __init__.py  order_flow.py  predictor.py  user_credentials.py  volatility.py
backend/app/services/: candle_cache.py  market_service.py  price_statistics.py  push_notification.py  telegram_bot.py  trade_executor.py  volatility_skew.py
cli/: Cargo.toml  QUICKSTART_VOLATILITY.md  README.md  TRADING_VISUALIZATION_RESEARCH.md  bitcoin_iv_data_sources_research.md  btc_volatility_regime_detector.py  requirements_volatility.txt
cli/src/: app.rs  events.rs  main.rs  trading.rs
cli/src/api/: client.rs  mod.rs  models.rs
cli/src/ui/: hourly_stats.rs  mod.rs  signals.rs  vol_skew.rs
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  test-sse.html  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: asset-selector.tsx  calculator-dialog.tsx  connection-status.tsx  geo-gate.tsx  help-dialog.tsx  snake-background.tsx  theme-toggle.tsx  timeframe-selector.tsx
frontend/components/auth/: wallet-button.tsx
frontend/components/dashboard/: animated-price.tsx  extreme-opportunities.tsx  greeks-profile.tsx  hourly-stats-widget.tsx  limit-order-calculator.tsx  liveline-chart.tsx  metric-card.tsx  order-book-depth.tsx  price-chart.tsx  (+5 more)
frontend/hooks/: use-animated-number.ts  use-realtime-data.ts  use-trade-execution.ts
frontend/lib/: api.ts  binance-ws.ts  binary-greeks.ts  exchange-api.ts  fetch-with-retry.ts  geoblocking.ts  kraken-api.ts  sse-client.ts  sse-manager.ts  sse-multi-asset-manager.ts
frontend/providers/: privy-provider.tsx
frontend/test/: README.md
(+33 files in other folders)
